--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - ...the women and the children too</title>
+  <title>The women and the children too;-)</title>
   <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Josefin+Sans:wght@222;400;500;600&family=Merriweather:ital,wght@1,300;1,700;1,900&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="./style.css">
